# dewflow

./: .dockerignore  .env.features.template  .env.smoke.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.db.yml  pyproject.toml
.claude/: settings.json
.claude/skills/pytest-test-writer/: SKILL.md
.claude/skills/review/: SKILL.md
.codex/skills/add-tests/: SKILL.md
.codex/skills/debug/: SKILL.md
.codex/skills/edit/: SKILL.md
.codex/skills/plan/: SKILL.md
.codex/skills/project/: SKILL.md
.codex/skills/read/: SKILL.md
.codex/skills/review/: SKILL.md
.codex/skills/write/: SKILL.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  pr-gate-ci.yml  smoke-ci.yml  static-ci.yml
alembic/: env.py
alembic/versions/: 2026_05_06_2324-a10ae1555f75_add_deleted_at_to_workspaces.py  2026_05_08_1500-b7c9e4d2a611_add_chunk_search_text.py  2026_05_14_1200-c3f8d6a19b42_add_chat_context_state.py  2026_05_20_0000-d20ae3655f81_add_deleted_at_to_chat_sessions.py  2026_05_22_0000-e5a1b2c3d4f5_add_phone_oauth_fields.py  2026_05_22_1528-ee8c06050a97_add_credits_tables.py  2026_05_27_0100-b7f8d9a2c3e4_add_repo_analysis_tables.py
backend/: main.py
backend/ai/core/: __init__.py  chat_context_builder.py  context_budgeter.py  live_window_builder.py  message_compressor.py  prompt_manager.py  prompt_resolver.py  prompt_templates.py  token_counter.py
backend/api/: dependencies.py
backend/api/v1/: api.py  sse_events.py
backend/application/: __init__.py
backend/application/chat/: __init__.py  history_projection.py  session_orchestrator.py  stream_events.py  timing.py  web_nonstream_workflow.py  web_stream_workflow.py  worker_generation_workflow.py  worker_guardrail_handler.py  worker_persistence_handler.py  (+2 more)
backend/config/: ai_settings.py  credit_settings.py  embedding.py  llm.py  permissions.py  prompts.py  rerank.py  schemas.py  settings.py  web_settings.py  worker_settings.py
backend/contracts/: chat_generation.py  interfaces.py  repository_protocols.py  uploads.py
backend/core/: constants.py  exception_handlers.py  exceptions.py  secret_env.py  security.py
backend/infra/: database.py  redis.py  task_broker.py  task_dispatcher.py
backend/middleware/: payload_limit.py  rate_limit.py  tracing.py
backend/models/: enums.py
backend/observability/: filtering_span_processor.py  langfuse_utils.py  logger.py  telemetry.py  trace_utils.py
backend/repositories/: access_repo.py  audit_repo.py  base.py  chat_repo.py  credit_repo.py  knowledge_repo.py  repo_analysis_repo.py  task_repo.py  user_repo.py
backend/services/: audit_service.py  base.py  chat_safety_metadata.py  chat_service.py  chunking_service.py  citation_validator.py  credit_service.py  external_context_service.py  feature_flag_service.py  google_oauth_service.py  knowledge_ingestion_recovery_service.py  knowledge_service.py  object_storage.py  permission_service.py  permission_types.py  rag_evidence_policy.py  rag_planning_service.py  rag_service.py  repo_analysis_service.py  safety_scanner.py  session_query_service.py  sms_service.py  task_service.py  unit_of_work.py  user_import_service.py  user_service.py  vector_index_service.py  workspace_service.py
backend/tasks/: __init__.py  knowledge_tasks.py  llm_tasks.py  worker_healthcheck.py
backend/utils/: file_parser.py  search_text.py  token_estimation.py
backend/worker/: dependencies.py
backend/workflow/: chat_nonstream_workflow.py  chat_workflow.py  knowledge_rag_workflow.py  knowledge_upload_workflow.py
configs/app/: base.yaml  local.yaml  prod.yaml  test.yaml
configs/bifrost/: README.md  config.json
configs/growthbook/: flags.yaml
configs/llm/: models.yaml  prompts.yaml
deploy/: docker-compose.override.yml  docker-compose.yml  patch.py
deploy/k8s/: README.md  api-deployment.yaml  api-hpa.yaml  api-ingress.example.yaml  api-service.yaml  configmap.yaml  db-migrator-job.yaml  frontend-deployment.yaml  frontend-ingress.example.yaml  frontend-service.yaml  knowledge-files-pvc.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  worker-deployment.yaml  worker-keda-scaledobject.yaml
deploy/logging/: vector.yaml
deploy/monitoring/: alert_rules.yml  grafana_dashboards_provisioning.yaml
docs/: api-review-tips.md  dev-test-flow.md  k8s-scaling-strategy.md  sqlalchemy-async-pitfalls.md  static-test-node.md  ty-typecheck-notes.md
evals/: README.md  common.py  compare_reports.py  dataset.sample.jsonl  eval_answer.py  eval_api_answer.py  eval_rag_answer.py  eval_rag_planner.py  eval_retrieval.py
frontend/: pnpm-lock.yaml
frontend/docs/: README.md  architecture.md  migration-plan.md
perf/: README.md  __init__.py  chat_api_load.py
perf/profiles/: enterprise_smoke.json  spike.json  steady.json
scripts/: backfill_chunk_search_text.py  check_import_boundaries.py  prepare_knowledge_docs.py
scripts/dev/: trace-watch.sh
scripts/diagnostics/: check_ai_env.py  debug_imports.py
scripts/flow/: dev_check.sh  runtime_check.sh
scripts/image/: build_backend.sh
scripts/lib/: common.sh
scripts/pg_init/: 01-readonly-role.sql
scripts/qa/: alembic_check.sh  check_no_while_true.py  check_test_markers.py  config_check.py  layer_deps_check.sh  pr_report.py  run_checks.sh  run_with_smoke_env.sh
scripts/seed/: debug_gb_api.py  dev_seed.py  seed_growthbook.py
scripts/smoke/: check_env.sh  create_kb.py  create_kb.sh  set_llm.sh  test.sh
secrets/smoke/: README.md
tests/: CONVENTIONS.md  README.md  api_tests.http  conftest.py
tests/helpers/: __init__.py  env.py
tests/integration/: taskiq_test_tasks.py  test_chat_api.py  test_ci_services.py  test_http_infra.py  test_taskiq_integration.py  test_user_api.py
tests/manual/: full_api_flow.http
tests/performance/: locustfile.py  test_llm_concurrency_performance.py  test_workflow_concurrency_performance.py
tests/smoke/: _http_smoke_helpers.py  test_chat_http_smoke.py  test_core_api_flow_smoke.py  test_knowledge_http_smoke.py  test_minimal_smoke.py  test_rag_http_smoke.py
tests/unit/: test_main_startup.py  test_task_dispatcher.py
(+346 files in other folders)
