[project]
name = "dewflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # ── Shared —— Web 和 Worker 两边都必须安装 ──
    "alembic~=1.17.0",
    "asyncpg~=0.31.0",
    "orjson~=3.10.15",
    "pgvector~=0.4.2",
    "pwdlib[argon2]~=0.2.0",
    "pydantic-settings~=2.12.0",
    "pydantic[email]~=2.12.0",
    "pyyaml~=6.0",
    "opentelemetry-api~=1.40.0",
    "opentelemetry-sdk~=1.40.0",
    "opentelemetry-exporter-otlp-proto-http~=1.40.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "python-json-logger~=3.2.1",
    "python-ulid~=3.1.0",
    "redis~=7.1.0",
    "sqlalchemy[asyncio]~=2.0.45",
    "langfuse~=3.14.0",
    "boto3~=1.42.0",
    "jieba~=0.42.1",
    # File parsing (shared by web and worker)
    "openpyxl~=3.1.0",
]

[project.optional-dependencies]
web = [
    # ── Web / HTTP API 专用 ──
    "fastapi~=0.128.0",
    "uvicorn~=0.40.0",
    "pyjwt[crypto]~=2.10.0",
    "python-multipart>=0.0.22",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

worker = [
    # ── TaskIQ Worker 专用 ──
    "taskiq~=0.12.0",
    "taskiq-redis~=1.2.0",
]

ai = [
    # ── AI / Worker Generation 专用 ──
    "openai~=2.21.0",
    "pydantic-ai-slim[google,openai]>=1.30.0",
    "jinja2~=3.1.0",
    "tiktoken~=0.9.0",
    # Knowledge processing
    "pypdfium2~=5.3.0",
]

[tool.ruff]
line-length = 88
exclude = [
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "Depends",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "locust>=2.33.0",
    "py-spy>=0.4.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "ragas>=0.2.0",
]

[tool.uvicorn]
reload_excludes = ["postgres_data/**"]

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["data", "logs", "config", "venv","postgres_data"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not performance'"
markers = [
    "smoke: fast smoke tests for critical paths",
    "performance: concurrency/load-oriented tests, excluded from default runs",
]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
all = "warn"

[tool.ty.src]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "tests",
    "alembic/versions",
    "alembic/archive_versions",
]

[tool.ty.terminal]
output-format = "full"

[tool.uv.workspace]
members = [
    "test-debug-agent",
]
